# lrl-wiki-text-cls-dataset

./: README.md  pyproject.toml  requirements.txt
data/: sample_data.json
scripts/: An Exploratory Analysis of Zulu Wikipedia for Multi-label Classification.ipynb
src/lrl_wiki_cls/: config.py  decompress_dumps.py  load_wiki_tables.py  randomly_sample_xml_file.py  structure_category_metadata.py  utils.py  wiki_text_cls_dataset.py
tests/: test_decompress_dumps.py  test_load_wiki_tables.py  test_project_package_import.py  test_randomly_sample_xml_file.py  test_raw_data_presence.py  test_structure_category_metadata.py  test_wiki_text_cls_dataset.py
